slight css fix for campscapes align interview title bar with flyoutTabs
Former-commit-id: 0257c05e8a94c2280dffe36ef967c900c27f94a9

--- a/app/assets/stylesheets/responsive/_structure.scss
+++ b/app/assets/stylesheets/responsive/_structure.scss
@@ -247,7 +247,7 @@ header.site-header {
 
 .wrapper-video {
   position: relative;
-  padding: 30px 5%;
+  padding: 30px 5% 25px;
   height: auto;
   background: $gray-darker;
   color: #fff;
